// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not swap out the import if styled-components v3 is detected 1`] = `
"import styled from 'styled-components';
const Named = styled(\\"div\\").withConfig({
  displayName: \\"example__Named\\",
  componentId: \\"ghf2ss-0\\"
})([\\"width:100%;\\"]);
const NamedWithInterpolation = styled(\\"div\\").withConfig({
  displayName: \\"example__NamedWithInterpolation\\",
  componentId: \\"ghf2ss-1\\"
})([\\"color:\\", \\";\\"], props => props.color);
const Wrapped = styled(Inner).withConfig({
  displayName: \\"example__Wrapped\\",
  componentId: \\"ghf2ss-2\\"
})([\\"color:red;\\"]);"
`;

exports[`should swap out the import if styled-components v4 beta is detected 1`] = `
"import styled from \\"styled-components/no-tags\\";
const Named = styled(\\"div\\").withConfig({
  displayName: \\"example__Named\\",
  componentId: \\"ghf2ss-0\\"
})([\\"width:100%;\\"]);
const NamedWithInterpolation = styled(\\"div\\").withConfig({
  displayName: \\"example__NamedWithInterpolation\\",
  componentId: \\"ghf2ss-1\\"
})([\\"color:\\", \\";\\"], props => props.color);
const Wrapped = styled(Inner).withConfig({
  displayName: \\"example__Wrapped\\",
  componentId: \\"ghf2ss-2\\"
})([\\"color:red;\\"]);"
`;

exports[`should swap out the import if styled-components v4+ is detected 1`] = `
"import styled from \\"styled-components/no-tags\\";
const Named = styled(\\"div\\").withConfig({
  displayName: \\"example__Named\\",
  componentId: \\"ghf2ss-0\\"
})([\\"width:100%;\\"]);
const NamedWithInterpolation = styled(\\"div\\").withConfig({
  displayName: \\"example__NamedWithInterpolation\\",
  componentId: \\"ghf2ss-1\\"
})([\\"color:\\", \\";\\"], props => props.color);
const Wrapped = styled(Inner).withConfig({
  displayName: \\"example__Wrapped\\",
  componentId: \\"ghf2ss-2\\"
})([\\"color:red;\\"]);"
`;
